# autopilot-deno

./: .gitignore  .gitmodules  .replit  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  deps.ts  egg.json  egg.yml  example.ts  mod.ts  plugin_config.json  plugin_config.ts  scripts.ts  scripts.yml  test.ts  tests.ts  types.ts  version.ts
.github/workflows/: .yml  build.yml  main.yml  ubuntu-ci.yml  ubuntu.yml
autopilot_bindings/: lib.rs  structs.rs  utils.rs
autopilot_core/: alert.rs  build.rs  internal.rs  key.rs  notify.rs  screen.rs  window.rs
autopilot_deno/: autopilot.ts
autopilot_deno/utils/: SP_displays_data_type_parser.ts  wmic_data_parser.ts
autopilot_plugin/: detect.ts  index.ts
autopilot_type_conversions/: README.md  index.ts
benchmarks/: README.md  alert.ts  collect.ts  deps.ts  index.ts  keyboard.ts  mouse.ts  screen.ts  window.ts  write.ts
bindings/: bindings.ts
conversions/: index.ts  methods.ts
docs/: CNAME  README.md  benchmarks.md  docup.min.js  index.html
docs/css/: style.css
docs/js/: type.js
examples/: alert.ts  click.ts  monitors.ts  mouse-move.ts  mouse-position.ts  notify.ts  pixel-color.ts  point-visible.ts  screen-scale.ts  screenshot.ts  screensize.ts  sine.ts  tap.ts  toggle.ts  transform.ts  type.ts  window.ts
lib/: autopilot.ts  monitors.ts
plugin/: detect.ts  index.js  index.ts  prepare.js
src/: autopilot.ts  bind.js  lib.rs
src/rs_lib/: Cargo.toml  alert.rs  bitmap.rs  build.rs  geometry.rs  internal.rs  key.rs  mod.rs  monitors.bat  mouse.rs  notify.rs  screen.rs  window.rs
tools/: createOp.ts  keycodesToType.ts
utils/: SP_displays_data_type_parser.ts  isAscii.ts  wmic_data_parser.ts
