[package]
name = "autopilot-deno"
version = "0.2.0"
authors = ["Divy Srivastava"]
edition = "2018"
publish = false

[lib]
path = "./src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
deno_bindgen = "0.1.1"
autopilot = { path = "./autopilot-rs/" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

