[package]
name = "rs_lib"
version = "0.0.2"
authors = ["Divy Srivastava <dj.srivastava23@gmail.com>"]
description = "A simple, cross-platform GUI automation library for Rust."
homepage = "https://autopilot.divy.work"
readme = "README.md"
repository = "https://github.com/divy-work/autopilot-deno"
license = "MIT"
keywords = ["cross-platform", "gui" ,"automation", "input", "simulation"]
categories = [
    "api-bindings",
    "gui",
    "os::macos-apis",
    "os::unix-apis",
    "os::windows-apis"
]

[lib]
name = "rs_lib"
path = "mod.rs"

[dependencies]
image = "0.22.4"
libc = "0.2.66"
rand = "0.7.2"
scopeguard = "1.0.0"

[dev-dependencies]
quickcheck = "0.9.2"

[build-dependencies]
pkg-config = "0.3.17"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.7.0"
core-graphics = { version = "0.19.0", features = ["highsierra"] }
cocoa = "0.20.0"

[target.'cfg(target_os = "linux")'.dependencies]
x11 = "2.18.1"
wmctrl =  { git = "https://github.com/Treborium/rust-wmctrl" }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.4", features = ["libloaderapi", "minwindef", "winbase", "winuser"] }
